--- a/start.html
+++ b/start.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <h1>My Start File is not index.html file</h1>
+    <h2>New Destination</h2>
+    <img src="sif.jpg" alt="">
 </body>
 </html>
