--- a/start.html
+++ b/start.html
@@ -9,6 +9,9 @@
 <body>
     <h1>My Start File is not index.html file</h1>
     <h2>New Destination</h2>
+    <h5>look mama, I can write a blog</h5>
+    <div>new blog</div>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum non impedit molestias provident esse sint incidunt cupiditate eius. Dolor sint fugit, dolores voluptatem totam quidem cumque incidunt dicta sapiente quaerat!</p>
     <img src="sif.jpg" alt="">
 </body>
 </html>
